--- a/momapy/sbgn/styling/newt.css
+++ b/momapy/sbgn/styling/newt.css
@@ -349,7 +349,7 @@ ConsumptionLayout {
 ProductionLayout {
     stroke: black;
     stroke-width: 1.25;
-    fill: none;
+    fill: black;
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.25;
     arrowhead-fill: black;
@@ -388,7 +388,7 @@ StimulationLayout {
 CatalysisLayout {
     stroke: black;
     stroke-width: 1.25;
-    fill: none;
+    fill: white;
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.25;
     arrowhead-fill: white;
@@ -401,7 +401,7 @@ CatalysisLayout {
 NecessaryStimulationLayout {
     stroke: black;
     stroke-width: 1.5;
-    fill: none;
+    fill: white;
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: white;
